--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^5.9.6"
   },
   "devDependencies": {
+    "@types/jest": "^25.2.1",
     "concurrently": "^5.1.0",
     "nodemon": "^2.0.2"
   }
