--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -1,4 +1,9 @@
 {
+  "parser": "@typescript-eslint/parser", // Specifies the ESLint parser
+  "parserOptions": {
+    "ecmaVersion": 2020, // Allows for the parsing of modern ECMAScript features
+    "sourceType": "module" // Allows for the use of imports
+  },
   "env": {
     "browser": true,
     "es6": true,
@@ -6,12 +11,26 @@
     "jest": true
   },
   "extends": ["react-app", "plugin:jest/recommended"],
-  "plugins": ["jest"],
+  "plugins": ["jest", "html"],
+  "overrides": [
+    {
+      "files": ["*.ts", "*.tsx", ".*.ts", ".*.tsx"],
+      "extends": ["react-app", "plugin:jest/recommended", "plugin:@typescript-eslint/recommended"]
+    }
+  ],
   "rules": {
     "jest/no-disabled-tests": "warn",
     "jest/no-focused-tests": "error",
     "jest/no-identical-title": "error",
     "jest/prefer-to-have-length": "warn",
     "jest/valid-expect": "error"
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".ts", ".tsx"],
+        "paths": ["src"]
+      }
+    }
   }
 }
