--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@redux-saga/core": "^1.1.3",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.1",
     "eslint": "^7.2.0",
