--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/jest": "^25.2.3",
+    "@types/react-input-mask": "^2.0.5",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "concurrently": "^5.2.0",
