--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "client": "npm start --prefix client",
     "server": "nodemon index.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "test": "npm run test --prefix client"
+    "test": "npm run test --prefix client",
+    "lint": "npm run lint --prefix client"
   },
   "keywords": [],
   "author": "",
