--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "nodemon src",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "npm run test --prefix client",
-    "lint": "npm run lint --prefix client"
+    "lint": "npm run lint --prefix client && eslint ./src/**/*.js"
   },
   "keywords": [],
   "author": "",
